Fix: Fixed weather-side overflow of container on top when screen size is lower than 1352px, and on left when screen size is bigger than 1352px.

--- a/frontend/src/stylesheet/Weather_forecast.scss
+++ b/frontend/src/stylesheet/Weather_forecast.scss
@@ -19,6 +19,13 @@ $border-radius: 25px;
   color: #eeeeee;
   background-color: #4B5682;
   --gradient: linear-gradient( 135deg, #4B5682 10%, #7F8EC0 100%);
+  @media (max-width: 1352px) {
+    padding-top: 40px;
+  }
+
+  @media (min-width: 1352px) {
+    padding-left: 25px;
+  }
 }
 
 .weather-side {
